# realmorrisliu.com

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  Makefile  PRODUCT.md  README.md  astro.config.mjs  eslint.config.js  keystatic.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.jsonc
.claude/: CLAUDE.md
.claude/agents/: blog-polish-expert.md  seo-optimizer.md
.github/workflows/: deploy.yml
.impeccable/: design.json
.impeccable/live/: config.json
agent/: README.md  agent.py  main.py  pyproject.toml  turso_checkpointer.py
agent/src/agent/: __init__.py
crates/resume-typst-wasm/: Cargo.toml
crates/resume-typst-wasm/src/: lib.rs
docs/: linkedin-automation-todo.md
docs/adr/: 0001-use-typst-for-resume-pdfs.md  0002-host-resume-typst-artifacts-on-r2.md
docs/deployment/: resume-typst-r2.md
public/: _headers  _redirects  manifest.json  robots.txt
public/resume-typst/: resume.en.typ  resume.typ  resume.zh.typ
public/resume-typst-wasm/: browser.js  resume_typst_wasm.js
public/rss/: styles.xsl
scripts/: add-photo.ts  build-site.mjs  generate-resume-typst-assets.mjs  resume-typst-r2-cors.json  upload-resume-typst-artifacts-to-r2.mjs
src/: env.d.ts  middleware.ts
src/components/: AuthStatus.astro  Button.astro  CurrentStatus.astro  DownloadIcon.astro  FooterSignature.astro  Footnote.astro  FootnoteRef.astro  FormattedText.astro  GitHubIcon.astro  HackerNewsIcon.astro  IconLink.astro  InlineNote.astro  InlineNoteRef.astro  LangToggle.astro  LanguageSwitcher.astro  Link.astro  (+13 more)
(+115 files in other folders)
